fix tooltips showing on mobile (should not show)

--- a/public/styles.css
+++ b/public/styles.css
@@ -1631,3 +1631,10 @@ tr:hover .actions {
   color: var(--text-main);
   font-feature-settings: "tnum";
 }
+
+/* Hide tooltips on mobile */
+@media screen and (max-width: 600px) {
+  .viz-tooltip {
+    display: none !important;
+  }
+}
